# Pentagram

./: .gitignore  .gitmodules  CMakeLists.txt  CmakeLists.txt  LICENSE  NOTICE  Pentagram.hpp  README.md
PentagramHeaders/: CMakeLists.txt  CmakeLists.txt  Pentagram.hpp  PentagramExt.hpp  core.hpp  enumerations.hpp  event.hpp  events.hpp  functions.hpp  image.hpp  includes.hpp  init.hpp  initialize.hpp  initloop.hpp  logger.hpp  windows.hpp
PentagramHeaders/functions/: time.hpp
PentagramHeaders/utilities/: ptrToChar.hpp  time.hpp  vsync.hpp
glad/: CMakeLists.txt  CmakeLists.txt  glad.c
glad/include/glad/: gl.h  glad.h
glad/src/: glad.c
headers/: Pentagram.hpp  enumerations.hpp  error.hpp  event.hpp  file.hpp  gl.hpp  image.hpp  includes.hpp  init.hpp  window.hpp  windows.hpp
headers/PNT/: Pentagram.hpp  enumerations.hpp  error.hpp  event.hpp  window.hpp
headers/depracated/: file.hpp
imgui/: CMakeLists.txt
source/: CMakeLists.txt  Pentagram.hpp  enumerations.hpp  error.cpp  event.cpp  event.hpp  file.cpp  file.hpp  gl.cpp  gl.hpp  image.cpp  image.hpp  includes.hpp  init.cpp  init.hpp  window.cpp  windows.cpp  windows.hpp
source/PNT/: error.cpp  event.cpp  init.cpp  window.cpp
source/depracated/: file.cpp
stb/: CmakeLists.txt
tests/: imageDragTest.cpp  inputTest.cpp
tests/res/shaders/: fragment.glsl  vertex.glsl
vendors/: CMakeLists.txt
vendors/glad/: CMakeLists.txt  glad.h
vendors/glad/glad/include/glad/: egl.h  gl.h  gles1.h  gles2.h  glsc2.h  wgl.h
vendors/glad/glad/src/: gl.c  gles1.c  gles2.c  glsc2.c
vendors/imgui/: CMakeLists.txt
vendors/stb/: CMakeLists.txt
